# drc

./: base.resource  interactive_console_output.xml  log.html  output.xml  pyproject.toml  report.html
log/: log.html  output.xml  report.html
resource/data/: cadastro_data.yml  login_data.yml
resource/locators/: cadLocators.yml  loginLocators.yml  semlogLocators.yml
resource/pages/: cadastroPage.resource  loginPage.resource  semcontaPage.resource
resource/utils/: openApp.resource
test/: cadastro.robot  login.robot  semconta.robot
